# auto_genius_daytona

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: main.py  pyproject.toml  requirements.txt
backend/artifacts/: encoders.pkl  price_scaler.pkl
backend/models/: car_price_model.keras
frontend/: package-lock.json  package.json
frontend/src/pages/: HomePage.jsx
