[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["rajesh-adk-137 <rajesworld2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.100.0"
uvicorn = "0.22.0"
tensorflow = "2.14.0"
python-dotenv = "1.0.0"
google-generativeai = "0.4.1"
numpy = "1.24.0"
pandas = "2.1.0"
scikit-learn = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
